# rec3D

./: INSTALL.sh  README.md  reconstruct_dataset.sh  reconstruct_pipeline.sh
binaries/: adjustBox  marchingCubes  paintMesh  rec3D
data/: readme.txt
data/alex/: data.txt
data/alex/output/openmvg/global/: Reconstruction_Report.html  SfMReconstruction_Report.html  cameraPath_translation_averaging.ply  cloud_and_poses.ply  initial_structure.ply  intrinsics_OpenMVG.txt  structure_00_refine_T_Xi.ply  structure_01_refine_RT_Xi.ply  structure_02_refine_KRT_Xi.ply  structure_03_outlier_removed.ply
data/alex/output/rec3D/: bbox_filt.ply  bbox_raw.ply  cameras.txt  grid.txt  images.txt
data/alex/output/rec3D/cameras/: cam_0.ply  (+11 more)
data/alex/output/sfm/: IMG_1112_cam.txt  IMG_1116_cam.txt  IMG_1121_cam.txt  IMG_1123_cam.txt  bbox_filt.txt  structure_filt.ply
data/castle/: data.txt
data/castle/output/rec3D/: bbox_filt.ply  bbox_raw.ply  cameras.txt  grid.txt  images.txt
data/castle/output/sfm/: IMG_1412_cam.txt  IMG_1413_cam.txt  IMG_1414_cam.txt  IMG_1418_cam.txt  IMG_1419_cam.txt  IMG_1420_cam.txt  IMG_1421_cam.txt  IMG_1426_cam.txt  IMG_1427_cam.txt  IMG_1429_cam.txt  IMG_1430_cam.txt  IMG_1435_cam.txt  IMG_1437_cam.txt  IMG_1438_cam.txt  IMG_1439_cam.txt  bbox_filt.txt  structure_filt.ply  structure_raw.ply
data/gerard/: data.txt
data/gerard/output/rec3D/: bbox_filt.ply  bbox_raw.ply  cameras.txt  grid.txt  images.txt
data/gerard/output/sfm/: IMG_1099_cam.txt  IMG_1100_cam.txt  IMG_1101_cam.txt  IMG_1102_cam.txt  IMG_1103_cam.txt  IMG_1104_cam.txt  IMG_1105_cam.txt  IMG_1108_cam.txt  IMG_1109_cam.txt  IMG_1110_cam.txt  IMG_1111_cam.txt  bbox_filt.txt  structure_filt.ply
data/indian/: data.txt
data/indian/output/rec3D/: bbox_filt.ply  bbox_raw.ply  cameras.txt  grid.txt  images.txt
data/indian/output/sfm/: 01_cam.txt  02_cam.txt  04_cam.txt  08_cam.txt  12_cam.txt  17_cam.txt  25_cam.txt  26_cam.txt  29_cam.txt  30_cam.txt  31_cam.txt  32_cam.txt  33_cam.txt  37_cam.txt  bbox_filt.txt  bbox_raw.txt  structure_filt.ply
modifications_openmvg/: main_GlobalSfM.cpp  main_IncrementalSfM.cpp  main_SfMInit_ImageListing.cpp  readme.txt
python/: plotvector.py  resize.py  sfm.py
src/adjustBox/: CMakeLists.txt  adjustBox.cpp
src/marchingCubes/: CMakeLists.txt  marchingCubes.cpp
src/paintMesh/: CMakeLists.txt  camerav2.cpp  paintMesh.cpp
src/rec3D/: CMakeLists.txt  bbox.cpp  camera.cpp  main.cpp  planesweep.cpp  pointcloud.cpp  tvl1.cpp
(+513 files in other folders)
